--- a/src/main/resources/kafka-config.properties
+++ b/src/main/resources/kafka-config.properties
@@ -4,9 +4,8 @@
 
 #producer configurations
 metadata.broker.list=localhost:9092
-serializer.class=kafka.serializer.StringEncoder
+key.serializer=org.apache.kafka.common.serialization.StringSerializer
+value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
 request.required.acks=1
-broker.list=localhost:9092
-topic.demo=demo
-
+bootstrap.servers=localhost:9092
 #consumer configurations
