Added consumer example

--- a/src/main/resources/kafka-config.properties
+++ b/src/main/resources/kafka-config.properties
@@ -1,11 +1,12 @@
 #===========================================
 #           KAFKA CONFIGURATIONS
 #===========================================
-
 #producer configurations
-metadata.broker.list=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+value.serializer=org.apache.kafka.common.serialization.StringSerializer
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 request.required.acks=1
 bootstrap.servers=localhost:9092
 #consumer configurations
+group.id=console-consumer-60661
